--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JDBC"/>
+	<classpathentry kind="lib" path="C:/_java/lib/java-json.jar"/>
+	<classpathentry kind="lib" path="C:/_java/lib/sqljdbc_9.4/cht/mssql-jdbc-9.4.1.jre8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
